Support location names

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 bot.shard=true
 bot.token=
 bot.coroutines=true
-google.credentials.redirect-uri=https://www.mrkirby153.com/authorization_callback.html
+google.credentials.redirect-uri=https://files.mrkirby153.com/authorization_callback.html
